--- a/app/src/main/res/layout/fragment_list_cafelist.xml
+++ b/app/src/main/res/layout/fragment_list_cafelist.xml
@@ -123,25 +123,7 @@
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cafeListRecyclerView">
-
-                <ImageView
-                    android:id="@+id/cafeList_footerLogo"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/logo" />
-
-                <TextView
-                    android:id="@+id/cafeList_footerTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:letterSpacing="-0.02"
-                    android:lineSpacingMultiplier="1.2"
-                    android:text="상호명: 위메카 We Make Cafe\n개발자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
-                    android:textColor="@color/black"
-                    android:textSize="8dp" />
-            </LinearLayout>
+                app:layout_constraintTop_toBottomOf="@id/cafeListRecyclerView"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
