--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -125,33 +125,36 @@
                     android:id="@+id/reviewMore_image1"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/image_view_round"
+                    android:padding="5dp"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <ImageView
                     android:id="@+id/reviewMore_image2"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/image_view_round"
+                    android:padding="5dp"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <ImageView
                     android:id="@+id/reviewMore_image3"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:background="@drawable/image_view_round"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/image_view_round"
+                    android:padding="5dp"
                     tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
 
