--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -225,7 +225,7 @@
                     android:layout_marginEnd="5dp"
                     android:gravity="right"
                     android:text="~"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     android:textIsSelectable="false"
                     android:textSize="14dp"
                     app:layout_constraintEnd_toStartOf="@+id/moreReview8"
@@ -238,7 +238,7 @@
                     android:layout_marginEnd="5dp"
                     android:gravity="right"
                     android:text="00:00"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     android:textIsSelectable="false"
                     android:textSize="14dp"
                     app:layout_constraintEnd_toStartOf="@+id/moreReview11"
@@ -252,7 +252,7 @@
                     android:layout_marginEnd="20dp"
                     android:gravity="right"
                     android:text="00:00"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     android:textIsSelectable="false"
                     android:textSize="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
