--- a/app/src/main/res/layout/item_home_taglist.xml
+++ b/app/src/main/res/layout/item_home_taglist.xml
@@ -37,6 +37,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="5dp"
+                        android:padding="3dp"
                         android:background="@drawable/image_view_round"
                         app:srcCompat="@mipmap/ic_launcher" />
 
