--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -102,16 +102,27 @@
                 app:layout_constraintTop_toBottomOf="@+id/reviewProfile_image" />
 
             <TextView
+                android:id="@+id/level"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_marginStart="10dp"
+                android:text="Lv."
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                app:layout_constraintStart_toEndOf="@+id/reviewProfile_image"
+                app:layout_constraintTop_toBottomOf="@+id/reviewNickName" />
+
+            <TextView
                 android:id="@+id/level_and_location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="2dp"
+                android:layout_marginStart="3dp"
                 android:singleLine="true"
                 android:text="레벨 및 위치인증"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="15sp"
-                app:layout_constraintStart_toEndOf="@+id/reviewProfile_image"
+                app:layout_constraintStart_toEndOf="@+id/level"
                 app:layout_constraintTop_toBottomOf="@+id/reviewNickName" />
 
             <ImageView
@@ -119,6 +130,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="10dp"
+                android:padding="3dp"
                 android:background="@drawable/image_view_round"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
