--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -178,44 +178,55 @@
                     tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/review_comment"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="20"
+                    android:layout_margin="10dp"
                     android:text="리뷰 내용"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/good_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <CheckBox
                     android:id="@+id/good_button"
-                    android:layout_width="20dp"
+                    android:layout_width="30dp"
                     android:layout_height="45dp"
-                    android:layout_gravity="left|bottom"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
+                    android:layout_marginEnd="7dp"
                     android:background="@drawable/good_checkbox"
-                    android:button="@null" />
+                    android:button="@null"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/good_count_textView" />
+
+                <ImageView
+                    android:id="@+id/good_button_imageView"
+                    android:layout_width="30dp"
+                    android:layout_height="45dp"
+                    android:layout_marginEnd="7dp"
+                    android:background="@drawable/good_checkbox"
+                    android:button="@null"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/good_count_textView" />
 
                 <TextView
                     android:id="@+id/good_count_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:layout_gravity="center_horizontal|bottom|right"
+                    android:layout_marginEnd="10dp"
                     android:text="0"
-                    android:layout_weight="1"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
-            </LinearLayout>
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/good_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/good_button" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
