--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -148,6 +148,18 @@
                 app:layout_constraintEnd_toStartOf="@+id/good_count_textView"
                 app:layout_constraintTop_toBottomOf="@+id/reviewImage" />
 
+            <ImageView
+                android:id="@+id/good_button_image"
+                android:layout_width="30dp"
+                android:layout_height="45dp"
+                android:layout_gravity="left"
+                android:layout_marginTop="10dp"
+                android:button="@null"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/good_checkbox"
+                app:layout_constraintEnd_toStartOf="@+id/good_count_textView"
+                app:layout_constraintTop_toBottomOf="@+id/reviewImage" />
+
             <TextView
                 android:id="@+id/good_count_textView"
                 android:layout_width="wrap_content"
