--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -16,18 +16,20 @@
 
         <Button
             android:id="@+id/cafe_search_input"
-            android:layout_width="310dp"
+            android:layout_width="0dp"
             android:layout_height="40dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/edge_top_back"
-            android:textSize="18sp"
             android:gravity="left|center_vertical"
-            android:text="이름, 주소 검색"
-            android:textColor="@color/gray"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:text="이름, 주소 검색"
+            android:textColor="@color/gray"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/logo"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
